[gd_scene load_steps=2 format=3 uid="uid://bd5m5eqerkpv8"]

[ext_resource type="Script" path="res://Scripts/landing_menu.gd" id="1_havof"]

[node name="LandingMenu" type="Node3D"]
script = ExtResource("1_havof")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainMenu" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -252.5
offset_top = -188.5
offset_right = 252.5
offset_bottom = 188.5
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="CanvasLayer/MainMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "COMP3000 Game"
horizontal_alignment = 1

[node name="Button_Start" type="Button" parent="CanvasLayer/MainMenu/VBoxContainer"]
layout_mode = 2
text = "Start Game"

[node name="Button_Select" type="Button" parent="CanvasLayer/MainMenu/VBoxContainer"]
layout_mode = 2
text = "Office Select"

[node name="Button_Settings" type="Button" parent="CanvasLayer/MainMenu/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="Button_Credits" type="Button" parent="CanvasLayer/MainMenu/VBoxContainer"]
layout_mode = 2
text = "Credits"

[node name="Button_Quit" type="Button" parent="CanvasLayer/MainMenu/VBoxContainer"]
layout_mode = 2
text = "Quit Game"

[node name="LevelSelect" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/LevelSelect"]
layout_mode = 0
offset_top = 179.0
offset_right = 1152.0
offset_bottom = 514.0
alignment = 1

[node name="Button_Left" type="Button" parent="CanvasLayer/LevelSelect/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "<"

[node name="Control" type="Control" parent="CanvasLayer/LevelSelect/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/LevelSelect/HBoxContainer/Control"]
layout_mode = 0
offset_left = 409.0
offset_top = -42.0
offset_right = 702.0
offset_bottom = 326.0

[node name="Label_Level_Name" type="Label" parent="CanvasLayer/LevelSelect/HBoxContainer/Control"]
layout_mode = 0
offset_left = 490.0
offset_top = -42.0
offset_right = 606.0
offset_bottom = 24.0
text = "Level_name"

[node name="Label_Description" type="Label" parent="CanvasLayer/LevelSelect/HBoxContainer/Control"]
layout_mode = 0
offset_left = 740.0
offset_top = 14.0
offset_right = 874.0
offset_bottom = 37.0
text = "Level_description"

[node name="Button" type="Button" parent="CanvasLayer/LevelSelect/HBoxContainer/Control"]
layout_mode = 0
offset_left = 453.0
offset_top = 292.0
offset_right = 605.0
offset_bottom = 328.0
text = "Enter_level
"

[node name="Button_Right" type="Button" parent="CanvasLayer/LevelSelect/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = ">"

[node name="Button_Return" type="Button" parent="CanvasLayer/LevelSelect"]
layout_mode = 0
offset_left = 21.0
offset_top = 20.0
offset_right = 195.0
offset_bottom = 60.0
text = "Return to main menu"

[node name="Settings" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Settings"]
layout_mode = 0
offset_left = 312.0
offset_top = 137.0
offset_right = 817.0
offset_bottom = 514.0

[node name="Title" type="Label" parent="CanvasLayer/Settings/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Settings
"
horizontal_alignment = 1

[node name="Label_Audio" type="Label" parent="CanvasLayer/Settings/VBoxContainer"]
layout_mode = 2
text = "Audio"
horizontal_alignment = 1

[node name="Label_Music" type="Label" parent="CanvasLayer/Settings/VBoxContainer"]
layout_mode = 2
text = "Music"

[node name="HSlider_Music" type="HSlider" parent="CanvasLayer/Settings/VBoxContainer"]
layout_mode = 2

[node name="Label_SFX" type="Label" parent="CanvasLayer/Settings/VBoxContainer"]
layout_mode = 2
text = "Sound effects"

[node name="HSlider_SFX" type="HSlider" parent="CanvasLayer/Settings/VBoxContainer"]
layout_mode = 2

[node name="Button_Return" type="Button" parent="CanvasLayer/Settings/VBoxContainer"]
visible = false
layout_mode = 2
text = "Return to main menu"

[node name="Button_Return" type="Button" parent="CanvasLayer/Settings"]
layout_mode = 0
offset_left = 21.0
offset_top = 20.0
offset_right = 195.0
offset_bottom = 60.0
text = "Return to main menu"

[node name="Credits" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button_Return" type="Button" parent="CanvasLayer/Credits"]
layout_mode = 0
offset_left = 21.0
offset_top = 20.0
offset_right = 195.0
offset_bottom = 60.0
text = "Return to main menu"

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/Credits"]
layout_mode = 0
offset_left = 312.0
offset_top = 137.0
offset_right = 817.0
offset_bottom = 605.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Credits/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Title" type="Label" parent="CanvasLayer/Credits/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Credits"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="CanvasLayer/Credits/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Developed by:"

[node name="Label" type="RichTextLabel" parent="CanvasLayer/Credits/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Oliver Cole
Computer science (Games Development)
University of Plymouth"
fit_content = true

[node name="Label2" type="Label" parent="CanvasLayer/Credits/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Project Vision:"

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/Credits/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "For teens curious about computing and people who enjoy complex puzzle games and want a fun and engaging challenge, my game is a 3D puzzle game that will teach players about computing logic with logic gates and truth tables through humorous and ridiculous office mishaps. The player is the new IT technician in a company that has been set up terribly, such as the printer only works when the coffee machine is on, and must solve logic puzzles to keep the office functional. The puzzles will get progressively harder throughout the game to keep players engaged and learning new concepts."
fit_content = true

[node name="Label4" type="Label" parent="CanvasLayer/Credits/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Tools & technologies
"

[node name="RichTextLabel2" type="RichTextLabel" parent="CanvasLayer/Credits/ScrollContainer/VBoxContainer"]
layout_mode = 2
fit_content = true

[node name="Label5" type="Label" parent="CanvasLayer/Credits/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Assets & Credits
"

[node name="RichTextLabel3" type="RichTextLabel" parent="CanvasLayer/Credits/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Assets used:

"
fit_content = true

[node name="Label6" type="Label" parent="CanvasLayer/Credits/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Built with Godot Engine 4.3
"

[connection signal="pressed" from="CanvasLayer/MainMenu/VBoxContainer/Button_Start" to="." method="_on_button_start_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/VBoxContainer/Button_Select" to="." method="_on_button_select_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/VBoxContainer/Button_Settings" to="." method="_on_button_settings_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/VBoxContainer/Button_Credits" to="." method="_on_button_credits_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/VBoxContainer/Button_Quit" to="." method="_on_button_quit_pressed"]
[connection signal="pressed" from="CanvasLayer/LevelSelect/Button_Return" to="." method="_on_button_return_pressed"]
[connection signal="pressed" from="CanvasLayer/Settings/VBoxContainer/Button_Return" to="." method="_on_button_return_pressed"]
[connection signal="pressed" from="CanvasLayer/Settings/Button_Return" to="." method="_on_button_return_pressed"]
[connection signal="pressed" from="CanvasLayer/Credits/Button_Return" to="." method="_on_button_return_pressed"]
